# kaitai_struct_samples

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: reuse-lint.yml  reuse_lint.yml  run-zizmor.yml
.reuse/: dep5
LICENSES/: Unlicense.md
archive/android_bootldr_huawei/: README.md  bootloader-angler-shortened.img  bootloader-angler-shortened.py
archive/android_sparse/: README.md  extended-headers.img  extended-headers.py  fill-4k-zeros.img
archive/xar/: README.md  apple-sha512-files-gzip.xar  apple-sha512-files-gzip.xar.license  custom-sha224-files-gzip.xar  md5-dir.xar  nocksum-dir.xar  sha1-dir.xar  sha1-file-bzip2.xar  sha1-file-nocomp.xar  sha1-file-nocomp.xar.license
common/ieee754_float/: ReadMe.md  f16be.ieee754  f16le.ieee754  f4be.ieee754  f4le.ieee754  f8be.ieee754  f8le.ieee754  f8le.ieee754.license  generate.py
database/datrie/: ReadMe.md  generate.py  test.datrie  test.datrie.license
executable/android_nanoapp_header/: README.md  imu_cal.napp_header  imu_cal.napp_header.license
executable/elf/: README.md  elf-Linux-ARMv7-ls.license  elf-NetBSD-x86_64-echo.license  hello_world.out  hello_world.out.license  small.o.license
executable/intel_hyperscan/: ReadMe.md  block.hyperscan_simple  generate.py  stream_large.hyperscan_simple  stream_large.hyperscan_simple.license  vectored.hyperscan_simple
executable/java_class/: LongType.java  README.md
executable/mach_o_fat/: MachO-iOS-armv7-armv7s-arm64-Helloworld.license  README.md
filesystem/amlogic_emmc_partitions/: README.md  amlogic-s905y2.bin.license
(+194 files in other folders)
